saturn-account-macros/tests/compile_fail/contradictory_flags.stderr
error[E0599]: the function or associated item `new` exists for struct `AccountLoader<'_, AccountInfo<'info>>`, but its trait bounds were not satisfied
 --> tests/compile_fail/contradictory_flags.rs:3:10
  |
3 | #[derive(Accounts)]
  |          ^^^^^^^^ function or associated item cannot be called on `AccountLoader<'_, AccountInfo<'info>>` due to unsatisfied trait bounds
  |
 ::: $WORKSPACE/deps/program/src/account.rs
  |
  | pub struct AccountInfo<'a> {
  | -------------------------- doesn't satisfy `AccountInfo<'info>: bytemuck::pod::Pod` or `AccountInfo<'info>: bytemuck::zeroable::Zeroable`
  |
  = note: the following trait bounds were not satisfied:
          `AccountInfo<'info>: bytemuck::pod::Pod`
          `AccountInfo<'info>: bytemuck::zeroable::Zeroable`
  = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AccountInfo<'info>: bytemuck::pod::Pod` is not satisfied
 --> tests/compile_fail/contradictory_flags.rs:3:10
  |
3 | #[derive(Accounts)]
  |          ^^^^^^^^ the trait `bytemuck::pod::Pod` is not implemented for `AccountInfo<'info>`
  |
  = help: the following other types implement trait `bytemuck::pod::Pod`:
            ()
            ManuallyDrop<T>
            PhantomData<T>
            PhantomPinned
            RuneAmount
            RuneId
            Wrapping<T>
            [T; N]
          and $N others
note: required by a bound in `AccountLoader`
 --> $WORKSPACE/saturn-account-parser/src/codec/zero_copy.rs
  |
  | pub struct AccountLoader<'a, T>
  |            ------------- required by a bound in this struct
  | where
  |     T: Pod + Zeroable + 'static,
  |        ^^^ required by this bound in `AccountLoader`
  = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)
